[project]
name = "comfyui-moonpack"
description = "Utility nodes for ComfyUI: dynamic concat/stack, smart resolutions, dimension helpers, regex tools, fast bypassers, VACE looper schedules."
version = "0.2.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Repository = "https://github.com/moonwhaler/comfyui-moonpack"
Issues = "https://github.com/moonwhaler/comfyui-moonpack/issues"

[tool.comfy]
PublisherId = "moonwhaler"
DisplayName = "MoonPack"
Icon = ""
